mobile responsive header overflow issue fixed

--- a/src/app/components/weather-detail/weather-detail.component.scss
+++ b/src/app/components/weather-detail/weather-detail.component.scss
@@ -24,16 +24,13 @@
 
 .weather-detail__city {
   position: absolute;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100px; /* Need a specific value to work */
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #fff;
   font-size: 48px;
 
   @media only screen and (min-width: 768px) {
-    margin: 0;
     top: 40px;
     left: 30px;
   }
